Add sentences about Reddit's detali info and invasion of lebanon

--- a/docs/main.tex
+++ b/docs/main.tex
@@ -64,12 +64,19 @@
 
     \chapter{はじめに} %章
 
-    \section{研究背景} %1.1
+    \section{研究背景}
+
     21世紀における紛争の様相は、従来の軍事的な衝突に加え、情報空間における戦いの重要性が増している。特に、ソーシャルネットワーキングサービス（SNS）は、紛争に関する情報発信や議論の場として機能し、世論形成に強い影響を与えている。これらのプラットフォームは、リアルタイムでの情報共有、国際的な議論の可視化、多様な声の拡散を可能にしている。
 
-    中でもRedditは、その匿名性と分散型のコミュニティ構造により、国際的な出来事への多様な反応が即座に表れるプラットフォームとして注目される。2023年10月7日のハマスによる襲撃とその後の戦闘激化は、イスラエルとハマス間の対立をデジタル空間にも波及させた。さらに、2024年10月1日のイスラエルによるレバノン侵攻は、この紛争を地域的に拡大させると同時に、人道危機への懸念を高め、SNS上での議論を一層活発化させた。
+    中でもRedditは、特異な構造と利用者特性を持つSNSとして注目されている。Redditは2005年に設立され、\textbf{2024年時点で月間アクティブユーザー数が約5億人に達している}（Statista, 2024）。その利用者層は主に北米とヨーロッパに集中しており、ユーザーの約50\%が18～34歳と比較的若い世代に偏っている。また、性別比率では男性が約60\%を占めるが、女性ユーザーも年々増加傾向にある（Reddit Demographics Report, 2024）。さらに、Redditのユーザーは教育水準が高く、大学卒業者が多いことも特徴の一つである。
 
-    これらの出来事を背景に、Reddit上では紛争に関する投稿数や議論内容が顕著に変化し、SNSが紛争に対する意見の形成や拡散に果たす役割が明らかになりつつある。本研究では、Reddit上で観察される投稿数や感情の変化、議論のトピックの移り変わりを分析し、現代の紛争がデジタル空間でどのように議論されるのかを探る。
+    このプラットフォームの最大の特徴は、匿名性と分散型のコミュニティ構造にある。Redditは、\textbf{サブレディットと呼ばれる膨大な数の専門的なコミュニティで構成されており、それぞれが特定のトピックや興味に基づいて議論を展開する}。投稿やコメントは、ユーザーからの評価（アップボートまたはダウンボート）によってランキングされるため、コミュニティ全体の関心や優先順位が自然に反映される仕組みが採用されている。この構造は、特定の話題について多様な視点を集約し、リアルタイムで議論を活発化させる基盤を提供している。
+
+    \textbf{2024年10月1日にイスラエルが実施したレバノン侵攻}は、国際社会における注目を集め、地域的な緊張を一層高める結果となった。この侵攻は、南レバノンを拠点とする武装組織ヒズボラによる攻撃への報復として行われたが、同時に人道危機を引き起こし、多くの民間人が犠牲となった。国連や人権団体は、即時停戦を呼びかける一方で、戦闘行為によるインフラの破壊と大規模な避難民の発生について深い懸念を表明した。
+
+    このような状況の中、\textbf{SNS上の議論は急激に活発化}し、Redditでも紛争関連の投稿やコメントが急増した。特に、\textit{r/worldnews, r/politics, r/MiddleEast}などのサブレディットでは、侵攻に関する情報や意見交換が爆発的に広がり、国際社会の反応や一般ユーザーの感情がリアルタイムで可視化された。これらのプラットフォームは、紛争に関連する多様な視点を集約するだけでなく、特定の意見やナラティブがどのように形成され拡散するかを観察する上で極めて重要な役割を果たした。
+
+    本研究では、このReddit上で観察される投稿数や感情の変化、議論のトピックの移り変わりを分析し、現代の紛争がデジタル空間でどのように議論されるのかを探る。
 
     \section{研究目的}
     本研究の目的は、2024年10月1日のイスラエルによるレバノン侵攻がReddit上の議論やユーザーの反応にどのような影響を与えたかを明らかにすることである。本研究は以下の3つの観点に焦点を当てる: 
